--- a/src/todo
+++ b/src/todo
@@ -5,6 +5,7 @@ add scatterplot
 add random order
 add saving to playlist
 add transition in toggling explanations
+handlewidth expl when values are too big or too small
 
 set max to sources (already max 40 songs => not needed?)
 check unnecessary update when sliders change (slidervalues are given to rec for exp but are replaced anyway)
