--- a/src/todo
+++ b/src/todo
@@ -1,5 +1,6 @@
 add barchart
 add seeds to recommendation
+check order of recommendations
 add highlight in barchart when hover
 add scatterplot
 add random order
