--- a/src/todo
+++ b/src/todo
@@ -1,12 +1,12 @@
-add barchart
-add seeds to recommendation
-check order of recommendations
+toggle all explanations
+recommendations in list
 add highlight in barchart when hover
 add scatterplot
-add random order
 add saving to playlist
 add transition in toggling explanations
 handlewidth expl when values are too big or too small
+test with other accounts
 
 set max to sources (already max 40 songs => not needed?)
 check unnecessary update when sliders change (slidervalues are given to rec for exp but are replaced anyway)
+
