--- a/src/todo
+++ b/src/todo
@@ -1,12 +1,28 @@
+---------------------
+Bugs
+--------------------
+remove first song of playlist
+check unnecessary update when sliders change (slidervalues are given to rec for exp but are replaced anyway)
+test with other accounts
+handlewidth expl when values are too big or too small
+set max to sources (already max 40 songs => not needed?)
+
+
+
+
+
+
+-----------------------
+New features
+----------------------
+
 toggle all explanations
 recommendations in list
 add highlight in barchart when hover
 add scatterplot
 add saving to playlist
 add transition in toggling explanations
-handlewidth expl when values are too big or too small
-test with other accounts
+add profile of playlist
+add flow of research
 
-set max to sources (already max 40 songs => not needed?)
-check unnecessary update when sliders change (slidervalues are given to rec for exp but are replaced anyway)
 
