scatterplot work in progress

--- a/src/todo
+++ b/src/todo
@@ -15,9 +15,9 @@ set max to sources (already max 40 songs => not needed?)
 New features
 ----------------------
 add scatterplot
-    update pattern
-    do not render axis multiple times
-    add lines/tick for slidervalue
+    add legend
+    opacity on hover
+    tooltip
 add logging
 add within subject random order
 
