--- a/todo
+++ b/todo
@@ -11,10 +11,10 @@ layout different screen size
 handlewidth expl when values are too big or too small
 set max to sources (already max 40 songs => not needed?)
 fix wrapping on mobile phone
-fix logging out
-    refactor accessToken and tokenobject
 use local cache instead of state history
-scatterplot search
+scatterplot under search search
+color code happiness
+
 
 
 
@@ -26,7 +26,6 @@ New features
 add logging
 add explanation pages
 tooltip waarde in explanations
-color code happiness
 add within subject random order
 add questionnaire
     need for cognition
