--- a/todo
+++ b/todo
@@ -24,6 +24,7 @@ color code happiness
 New features
 ----------------------
 add logging
+tooltip generate recommendations based on this song
 add explanation pages
 tooltip waarde in explanations
 add within subject random order
@@ -31,6 +32,7 @@ add questionnaire
     need for cognition
     post task
 link scatterplot with list of recommendations
+colorcoding happiness more yellow
 
 
 ----------------------
