--- a/todo
+++ b/todo
@@ -24,6 +24,7 @@ color code happiness
 New features
 ----------------------
 add logging
+only enable continue after 8 songs
 tooltip generate recommendations based on this song
 add explanation pages
 tooltip waarde in explanations
