--- a/todo
+++ b/todo
@@ -1,6 +1,8 @@
 ---------------------
 Bugs
 --------------------
+Label danceability in scatterplot
+circles out of bounds scatterplot
 check unnecessary update when sliders change (slidervalues are given to rec for exp but are replaced anyway)?
 request for /null
 test with other accounts
@@ -17,9 +19,6 @@ fix wrapping on mobile phone
 -----------------------
 New features
 ----------------------
-only enable continue after 8 songs + tooltip task
-tooltip waarde in explanations
-add option to remove search results
 script valid users
 colorcoding happiness more yellow
 New version without the experiment, but with logging (long term study)
@@ -28,8 +27,6 @@ New version without the experiment, but with logging (long term study)
 ----------------------
 Style improvements
 ----------------------
-
-add highlight in barchart when hover
 add transition in toggling explanations
 add profile of playlist
 
